--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
-    "node": "^21.1.0"
+    "node": "^21.1.0",
+    "sqlite3": "^5.1.6"
   },
   "name": "team-1",
   "description": "",
